--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -1,21 +1,24 @@
 .card{
-    background-color: rgb(30, 32, 66);
-    border: 1px solid black;
+    /* background-color: rgb(30, 32, 66); */
+    background-color: #b9c0c7;
+    border: 1px solid #1a4e82;
     border-radius: 50px;
-    color: white;
+    color: #03172a;
     text-align: justify;
-    width: 400px;
-    height: 400px;
-    margin: 20px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 75px;
+    height: 80px;
+    margin: 6px;
     padding: 10px;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
+    justify-content:center;
     align-items: center;
   
   }
   .card > img{
-    width: 300px; 
-    height:200px;
+    width: 200px; 
+    height:220px;
+    border: 5px solid #03172a;
+    margin-bottom: 10px;
   }
