--- a/src/pages/store/store.css
+++ b/src/pages/store/store.css
@@ -1,15 +1,18 @@
+
 .slider-container{
-    scroll-snap-type: x mandatory;
+    scroll-snap-type:y mandatory;
     display:flex;
-    width: 100%;
-    height: 100vh;
-    overflow-x: scroll;
+    flex-direction: column;
+    width: 50vh; /*100%*/
+    height: 90vh; /*100vh*/
+    overflow-y:scroll;
+    overflow-x: hidden;
 }
 
 .slider-container div{
-    scroll-snap-align: center;
-    flex: 0 0 100%;
-    width: 100%;
-    object-fit: cover;
+    scroll-snap-align:center;
+    flex: 0 0 400px;
+    width: 300px;
+    /* object-fit: cover; */
 
 }
