--- a/src/pages/store/store.css
+++ b/src/pages/store/store.css
@@ -3,8 +3,8 @@
     scroll-snap-type:y mandatory;
     display:flex;
     flex-direction: column;
-    width: 50vh; /*100%*/
-    height: 90vh; /*100vh*/
+    width: 50vh; 
+    height: 90vh;
     overflow-y:scroll;
     overflow-x: hidden;
 }
@@ -13,6 +13,4 @@
     scroll-snap-align:center;
     flex: 0 0 400px;
     width: 300px;
-    /* object-fit: cover; */
-
 }
