--- a/src/pages/store/store.css
+++ b/src/pages/store/store.css
@@ -13,4 +13,26 @@
     scroll-snap-align:center;
     flex: 0 0 400px;
     width: 300px;
+    height: 500px;
+    background-color: #b9c0c7;
+    border: 1px solid #1a4e82;
+    border-radius: 50px;
+    color: #03172a;
+    text-align: justify;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 6px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+}
+.slider-container img{
+    width: 200px; 
+    height:220px;
+    border: 5px solid #03172a;
+    margin-bottom: 10px;
+}
+a {
+text-decoration: none;
 }
