--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -11,15 +11,43 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: fixed;
+    z-index: 99;
+    margin-bottom: 50px;
+    width: 100%;
   }
   img {
     width: 200px;
     height: 40px;
   }
-  .links {
+  .linksOffline, .linksOnline {
     display: flex;
     font-size:small;
-    justify-content:space-around;
     align-items: center;
+    justify-content:space-around;
+  }
+  .linksOnline{
     width:500px;    
   }
+
+  .linksOffline{
+    width:200px;    
+  }
+.counter{
+  width: 25px;
+  height: 25px;
+  border: 2px solid #012433;
+  background-color: #07a2e4;
+  color: #ffffff;
+  text-shadow: #25384e;
+  border-radius: 1000px;
+  justify-content:center ;
+  align-items: center;
+  text-align: center;
+  font-weight: bolder;
+}
+
+.counter:hover{
+  background-color: white;
+  color:#07a2e4
+}
