--- a/src/components/showProd/showprod.css
+++ b/src/components/showProd/showprod.css
@@ -1,32 +1,72 @@
 .showprod-container{
-    padding: 20px;
+    padding: 50px;
     display:flex;
     flex-direction: column;
-    width: 600px;
+    width: 100%;
     height: fit-content;
     align-items: center;
+    justify-content: center;
     
 }
 .showprod-box{
     
     padding: 50px;
     background-color: #b9c0c7; 
-    width:fit-content; 
     height:30%;
     display:flex;
-    flex-direction: column;
-    width: fit-content;
+    flex-direction: row;
+    width: 80%;
     height: fit-content;
-    border-radius: 50px;
-
+    /* border-radius: 50px; */
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    justify-content: space-evenly;
 }
-.showprod-box>h3{
-    font-size: medium;
-}
-.showprod-image{
+.showprod-box>div>img{
     width: 350px;
     height: 450px;;
     border: 5px black solid;
     justify-content: center;
+    align-items: center;
+}
+
+.showprod-box>div>h2{
+    font-size: xx-large;
+    width: 350px;
+    text-align: center;
+    align-items: center;
+}
+
+.showprod-container-two{
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    padding: 20px;
+    background-color: rgb(255, 255, 255);
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+}
+.showprod-container-two>article{
+    text-align: justify; 
+    width:100%;
+    justify-content: center;
+    align-items: center;
+    padding:20px;
+    /* background-color: rgb(185, 94, 94); */
+}
+
+.showprod-container-two>article>p{
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.price{
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+}
+.price>div>div{
+    display: flex;
+    flex-direction: row;
     align-items: center;
 }
