--- a/src/components/checkout/checkout.css
+++ b/src/components/checkout/checkout.css
@@ -3,5 +3,17 @@
     padding: 20px;
     width: 100%;
     height:fit-content;
+    display: flex;
+
     /* background-color: green; */
+    
+}
+
+.sum{
+    border: 3px solid black;
+    background-color: #b9c0c7;
+    border-radius: 50px;
+    width: 300px;
+    height: 400px;
+    padding: 20px;
 }
