--- a/src/components/checkout/checkout.css
+++ b/src/components/checkout/checkout.css
@@ -14,6 +14,6 @@
     background-color: #b9c0c7;
     border-radius: 50px;
     width: 300px;
-    height: 400px;
+    height: fit-content;
     padding: 20px;
 }
